[package]
name = "map-tile-studio"
version = "1.0.0"
description = "Map Tile Studio by AiGeoLAB"
authors = ["AiGeoLAB <https://ai-geolab.org>"]
edition = "2021"
rust-version = "1.94"

[lib]
name = "map_tile_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
num_cpus = "1"

# Shared headless XYZ tile server (in-app preview + the standalone service).
mts-tile-server = { path = "../tile-server" }
# The generation engine — reused directly, no HTTP server.
martin-tiler = { path = "../../martin-tiler", default-features = false }
# COG metadata for the catalog (zoom range / bounds / format).
martin-core = { path = "../../martin-core", default-features = false, features = ["unstable-cog"] }
martin-tile-utils = { path = "../../martin-tile-utils" }
